update: trying to fix swagger and params in get all routes
